<resources>
    <string name="app_version" translatable="false">Version 1.0</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_menu" translatable="false">Menu</string>
    <string name="title_activity_demo" translatable="false">Demo</string>
    <string name="title_activity_text" translatable="false">Text</string>
    <string name="title_activity_model" translatable="false">Model</string>
    <string name="item" translatable="false">item</string>
    <string-array name="menu_items">
        <item>Load Model</item>
        <item>Models</item>
        <item>Demo</item>
        <item>Help</item>
        <item>About</item>
        <item>Exit</item>
    </string-array>
    <string name="image" translatable="false">image</string>
    <string name="model_name" translatable="false">Model name</string>
    <string name="texture" translatable="false">Texture</string>
    <string name="invert_texture_coordinates" translatable="false">Invert texture coordinates</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="load" translatable="false">Load</string>
    <string name="load_model" translatable="false">Load Model</string>
    <string name="toggle_wireframe" translatable="false">Toggle wireframe</string>
    <string name="toggle_textures" translatable="false">Toggle textures</string>
    <string name="toggle_lights" translatable="false">Toggle lights</string>
    <string name="toggle_boundingbox" translatable="false">Toggle bounding box</string>
    <string name="load_texture" translatable="false">Load texture</string>
    <string name="app_logo_desc" translatable="false">Teapot animated logo</string>
    <string name="app_name" translatable="false">P.E.T.</string>
    <string name="general_evidence_button">Evidence</string>
    <string name="general_maps_button">Maps</string>
    <string name="general_tasks_button">Tasks</string>
    <string name="general_evidence_reset_button">Reset</string>
    <string name="localFile_ghostEvidencePair_name" translatable="false">GhostEvidencePair.json</string>
    <string name="preferences_globalFile_name" translatable="false">Global_Preferences</string>
    <string name="preferences_newsletterFile_name" translatable="false">Newsletter_Preferences</string>
    <string name="preference_latestDatabaseVersion" translatable="false">LatestDatabaseVersion</string>
    <string name="preference_general_news_link" translatable="false">https://raw.githubusercontent.com/TRITIUMNITR0X/PET-MessageCenter/master/GeneralNews</string>
    <string name="preference_pet_changelog_link" translatable="false">https://raw.githubusercontent.com/TRITIUMNITR0X/PET-MessageCenter/master/Changelog</string>
    <string name="preference_phasmophobia_changelog_link" translatable="false">https://steamcommunity.com/games/739630/rss/</string>
    <string name="preference_newsletter_lastreaddate_general" translatable="false">newsletter_lastreaddate_general</string>
    <string name="preference_newsletter_lastreaddate_pet" translatable="false">newsletter_lastreaddate_pet</string>
    <string name="preference_newsletter_lastreaddate_phas" translatable="false">newsletter_lastreaddate_phas</string>
    <string name="preference_language" translatable="false">chosenLanguage</string>
    <string name="preference_network" translatable="false">networkPreference</string>
    <string name="preference_isAlwaysOn" translatable="false">isAlwaysOn</string>
    <string name="preference_isHuntAudioWarningAllowed" translatable="false">isHuntAudioWarningAllowed</string>
    <string name="preference_isLeftHandSupportEnabled" translatable="false">isLeftHandSupportEnabled</string>
    <string name="preference_huntWarningFlashTimeout" translatable="false">huntWarningFlashTimeout</string>
    <string name="preference_colorSpace" translatable="false">colorSpace</string>
    <string name="preference_fontType" translatable="false">fontType</string>
    <string name="tutorialTracking_canShowIntroduction" translatable="false">canShowIntroduction</string>
    <string name="reviewtracking_canRequestReview" translatable="false">canRequestReview</string>
    <string name="reviewtracking_appTimeAlive" translatable="false">appTimeAlive</string>
    <string name="reviewtracking_appTimesOpened" translatable="false">appTimesOpened</string>
    <string name="titlescreen_beta_label" translatable="false">Beta</string>
    <string name="titlescreen_description">The ultimate evidence tool</string>
    <string name="titlescreen_button">Start Hunting</string>
    <string name="titlescreen_languages_label">Select Language</string>
    <string name="review_requesttitle">Please consider rating P.E.T.!</string>
    <string name="review_accept">Sure!</string>
    <string name="review_decline">No thanks</string>
    <string name="review_storelink_app" translatable="false">market://details?id=com.TritiumGaming.phasmophobiaevidencepicker</string>
    <string name="review_storelink_website" translatable="false">https://play.google.com/store/apps/details?id=com.TritiumGaming.phasmophobiaevidencepicker</string>
    <string name="language_fullName_german" translatable="false">Deutsch</string>
    <string name="language_fullName_english" translatable="false">English</string>
    <string name="language_fullName_spanish" translatable="false">Español</string>
    <string name="language_fullName_french" translatable="false">Français</string>
    <string name="language_fullName_russian" translatable="false">Russian</string>
    <string name="language_fullName_czech" translatable="false">Czech</string>
    <string name="language_abbrName_german" translatable="false">de</string>
    <string name="language_abbrName_english" translatable="false">en</string>
    <string name="language_abbrName_spanish" translatable="false">es</string>
    <string name="language_abbrName_french" translatable="false">fr</string>
    <string name="language_abbrName_russian" translatable="false">ru</string>
    <string name="language_abbrName_czech" translatable="false">cs</string>
    <string name="aboutinfo_discordInvite" translatable="false">RawQP9H7y7</string>
    <string name="aboutinfo_title_petstylized" translatable="false">
        <![CDATA[
                <font color=#FF0000>P</font>.<font color=#FF0000>E</font>.<font color=#FF0000>T</font>.
            ]]>
    </string>
    <string name="aboutinfo_developerinfo_devname" translatable="false">Tritium Gaming Studios</string>
    <string name="aboutinfo_developerinfo_address" translatable="false">TritiumGamingStudiosDM@gmail.com</string>
    <string name="aboutinfo_title_about">About</string>
    <string name="aboutinfo_version">Version</string>
    <string name="aboutinfo_aboutapp_info">
        <![CDATA[
            <p><font color=#CC3C3C>Phasmophobia</font> is a unique horror game developed by <font color=#CC3C3C>Kinetic Games</font>.</p>
            <p><font color=#CC3C3C>P.E.T.</font> is an unofficial companion tool\-\- acting both as a guide for new players and as an assistant for the veterans.</p>
            <p><font color=#CC3C3C>Thank you so much for using P.E.T.!</font></p>
        ]]>
    </string>
    <string name="aboutinfo_developerinfo_title">Developer Info</string>
    <string name="aboutinfo_developerinfo_developer">Developer</string>
    <string name="aboutinfo_developerinfo_contact">Contact</string>
    <string name="aboutinfo_joindiscord">Join the Discord</string>
    <string name="aboutinfo_specialthanks_title">Special Thanks</string>
    <string name="settings_title">Settings</string>
    <string name="settings_confirm">Confirm</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_generalsettings">General</string>
    <string name="settings_extrasettings">Extra Settings</string>
    <string name="settings_appearancesettings">Appearance</string>
    <string name="settings_fontstylesettings">Font Style</string>
    <string name="settings_adsconsentcontrolsettings">GDPR Settings</string>
    <string name="settings_adsconsentcontrolsettings_button">Edit</string>
    <string name="settings_screenalwayson">Always keep the screen on</string>
    <string name="settings_networktitle">Allow Message Center to use Mobile Data</string>
    <string name="settings_huntwarningflashtimeout">Hunt warning flash timeout</string>
    <string name="settings_huntwarningflashtimeout_never">Never Timeout</string>
    <string name="settings_enableLeftHandSupport">Enable Left-Handed Mode</string>
    <string name="settings_enablehuntaudioqueue">Enable Hunt Audio Warning</string>
    <string name="settings_colorblindnessmode_title">Colorblind Mode</string>
    <string name="settings_colorblindnessmode_note">(Will take effect after leaving Settings)</string>
    <string name="settings_colorblindnessmode_normal">None</string>
    <string name="settings_colorblindnessmode_monochromacy">Achromatopsia</string>
    <string name="settings_colorblindnessmode_deuteranomaly">Deuteranopia</string>
    <string name="settings_colorblindnessmode_protanomaly">Protanopia</string>
    <string name="settings_colorblindnessmode_tritanomaly">Tritanopia</string>
    <string name="settings_colormode_funhouse" translatable="false">Funhouse</string>
    <string name="settings_fontstyle_classic">P.E.T. Classic</string>
    <string name="settings_fontstyle_android" translatable="false">Android</string>
    <string name="settings_fontstyle_journal" translatable="false">Journal</string>
    <string name="settings_fontstyle_brick" translatable="false">Brick</string>
    <string name="settings_fontstyle_clean" translatable="false">Clean</string>
    <string name="messagecenter_inboxestitle_label">Message Center</string>
    <string name="messagecenter_inbox_general">General News</string>
    <string name="messagecenter_inbox_pet">P.E.T. Changelog</string>
    <string name="messagecenter_inbox_phas">Phasmophobia Changelog</string>
    <string name="evidence_average_sanity_title" translatable="false">Average Sanity</string>
    <string name="evidence_prep_time_title" translatable="false">Prep Time</string>
    <string name="evidence_your_sanity_level_title" translatable="false">Your Sanity level</string>
    <string name="evidence_timer_label">Preparation Time:</string>
    <string name="evidence_timer_difficulty_default">None</string>
    <string name="evidence_timer_difficulty_1">Amateur</string>
    <string name="evidence_timer_difficulty_2">Intermediate</string>
    <string name="evidence_timer_difficulty_3">Professional</string>
    <string name="evidence_timer_difficulty_4">Nightmare</string>
    <string name="evidence_timer_difficulty_5">Insanity</string>
    <string name="evidence_timer_difficulty_label">Difficulty:</string>
    <string name="evidence_timer_maplabel">Map:</string>
    <string name="evidence_timer_actionlabel">ACTION</string>
    <string name="evidence_timer_setuplabel">SETUP</string>
    <string name="evidence_sanity_huntwarn">HUNT WARN</string>
    <string name="evidence_sanitymeter_title">Max Sanity Level</string>
    <string name="evidence_ghosts_title">Ghosts</string>
    <string name="evidence_evidence_title">Evidence</string>
    <string name="evidence_popup_ghost_strength">Strengths</string>
    <string name="evidence_popup_ghost_weakness">Weaknesses</string>
    <string name="evidence_popup_ghost_info">Information</string>
    <string name="evidence_popup_ghost_huntdata">Hunting Data</string>
    <string name="evidence_timer_time_1" translatable="false">300000</string>
    <string name="evidence_timer_time_2" translatable="false">120000</string>
    <string name="evidence_timer_time_3" translatable="false">0</string>
    <string name="ghost_type_banshee">Banshee</string>
    <string name="ghost_type_demon">Demon</string>
    <string name="ghost_type_deogen" translatable="false">Deogen</string>
    <string name="ghost_type_goryo" translatable="false">Goryo</string>
</resources>