<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/model_toggle_wireframe"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="200"
        android:title="@string/toggle_wireframe"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/model_toggle_lights"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="300"
        android:title="@string/toggle_lights"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/model_toggle_textures"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="400"
        android:title="@string/toggle_textures"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/model_toggle_boundingbox"
        android:icon="@android:drawable/ic_menu_crop"
        android:orderInCategory="500"
        android:title="@string/toggle_boundingbox"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/model_load_texture"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="501"
        android:title="@string/load_texture"/>
    <!--
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="500"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>


    -->

</menu>