<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_main_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <com.TritiumGaming.phasmophobiaevidencepicker.views.global.NavHeaderLayout
        android:id="@+id/navHeaderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:NavHeaderLayoutButtonLeft="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout39"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navHeaderLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_version"
            style="?attr/secondaryFont_Regular_AutoSqueeze"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/aboutinfo_developerinfo_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/aboutinfo_aboutapp_info"
                    style="?attr/quaternaryFont_Regular_Manual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutinfo_developerinfo_title"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/aboutinfo_developerinfo_title"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout37"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


        <ScrollView
            android:id="@+id/constraintLayout37"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout_discord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutinfo_developerinfo_title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/appinfo_developerinfo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/appinfo_developerinfo_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_devTitle_label"
                    style="?attr/secondaryFont_Regular_AutoSqueeze"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/aboutinfo_developerinfo_developer"
                    android:textColor="?attr/textColorPrimary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_devTitle_name"
                    style="?attr/secondaryFont_Regular_AutoSqueeze"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:gravity="center"
                    android:text="@string/aboutinfo_developerinfo_devname" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_devEmail_label"
                    style="?attr/secondaryFont_Regular_AutoSqueeze"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/aboutinfo_developerinfo_contact"
                    android:textColor="?attr/textColorPrimary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_devEmail_name"
                    style="?attr/secondaryFont_Regular_AutoSqueeze"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:gravity="center"
                    android:text="@string/aboutinfo_developerinfo_address" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_discord"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:background="@drawable/listitem_circled"
            android:backgroundTint="?attr/light_inactive"
            android:backgroundTintMode="multiply"
            app:layout_constraintBottom_toTopOf="@+id/aboutinfo_specialthanks_title"
            app:layout_constraintDimensionRatio="16:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout37"
            app:layout_constraintVertical_chainStyle="spread">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/popup_close_button2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/icon_discord"
                android:tint="?attr/textColorPrimary"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/appinfo_joinDiscord"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appinfo_joinDiscord"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/aboutinfo_joindiscord"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/popup_close_button2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutinfo_specialthanks_title"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/aboutinfo_specialthanks_title"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/aboutapp_specialthanks_scrollview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_discord" />

        <ScrollView
            android:id="@+id/aboutapp_specialthanks_scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/scrollview_list_specialthanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:orientation="vertical" />

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>