<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_main_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    android:gravity="center_horizontal|center_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20sp"
        android:background="@drawable/popup_rating_fg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".75">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_ratingstitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/review_requesttitle"
            android:textColor="?attr/subtitleFontColor"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout18"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_ratingstitle">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1"
                android:theme="@style/RequestRatingBar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout18"
            app:layout_constraintHeight_percent=".3"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout18"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout18">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_accept"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/review_accept"
                android:padding="2sp"
                android:background="@drawable/icon_square_alt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/label_decline"
                app:layout_constraintHeight_percent=".5"
                app:layout_constraintWidth_percent=".45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_decline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/review_decline"
                android:padding="2sp"
                android:background="@drawable/icon_square_alt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".5"
                app:layout_constraintWidth_percent=".45"
                app:layout_constraintStart_toEndOf="@+id/label_accept"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>